samples/deep-validation/scripts/negative/missing-interface-property.ts
export interface Point {
    x: int32;
    y: int32;
}

export function invalid(): int32 {
    const point: Point = { x: 4 };
    return point.x;
}
